--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -55,7 +55,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>%REACT_APP_NAME%</title>
+  <title>Employee Management System</title>
 
   <!-- Start Single Page Apps for GitHub Pages -->
   <script type="text/javascript">
